--- a/note/todo.txt
+++ b/note/todo.txt
@@ -1,3 +1,5 @@
+- fix "central" illustration in event queue to have combat and tutorial as
+  labelled systems
 - write event queue chapter
 - write bytecode chapter
 - write "games, architecture, and performance" intro chapter
