Bunch of minor fixes.
Stuff I noticed while revising the print edition.

--- a/note/todo.txt
+++ b/note/todo.txt
@@ -1,2 +1,4 @@
-Create cross-references to other chapters
-Remove footers from blank pages?
+- Fix prose references to hyperlinks to make them make sense
+- Index
+  - Go through indexes for Intro - Singleton and use multi-page references
+    where appropriate
